# husky_robot

./: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: ci.yml
config/: diagnostics.yaml  husky_ekf.yaml  imu_compass.yaml  mag_config_default.yaml
husky_base/: CHANGELOG.rst  CMakeLists.txt  package.xml
husky_base/include/husky_base/: horizon_legacy_wrapper.h  husky_diagnostics.h  husky_hardware.h
husky_base/launch/: base.launch
husky_base/src/: horizon_legacy_wrapper.cpp  husky_base.cpp  husky_diagnostics.cpp  husky_hardware.cpp
husky_base/src/horizon_legacy/: Transport.cpp
husky_bringup/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
husky_bringup/config/: microstrain.yaml
husky_bringup/launch/blackfly_config/: blackfly.launch
husky_bringup/launch/dual_ur5_arm_config/: husky_dual_ur5_planning_execution.launch  left_ur5.launch  right_ur5.launch
husky_bringup/launch/flir_ptu/: flir_ptu.launch
husky_bringup/launch/ft_300/: ft_300_left.launch  ft_300_right.launch
husky_bringup/launch/hokuyo_config/: ust10.launch
husky_bringup/launch/lms1xx_config/: lms1xx.launch
husky_bringup/launch/microstrain_config/: microstrain.launch
husky_bringup/launch/realsense_config/: realsense.launch
husky_bringup/launch/robotiq_s_model_gripper/: robotiq_s_gripper_left.launch
husky_bringup/launch/robotiq_s_model_grippers/: robotiq_s_gripper_left.launch  robotiq_s_gripper_left.launch.save  robotiq_s_gripper_right.launch
husky_bringup/launch/sick_config/: sick.launch
husky_bringup/launch/um6_config/: um6.launch
husky_bringup/launch/um7_config/: um7.launch
husky_bringup/launch/ur5_arm_config/: ur5.launch
husky_bringup/launch/velodyne_config/: vlp16.launch
husky_bringup/scripts/: compute_calibration  install
husky_bringup/udev/: 52-ftdi.rules
husky_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
include/husky_base/: horizon_legacy_wrapper.h  husky_diagnostics.h  husky_hardware.h
include/husky_base/horizon_legacy/: Message.h  cwrap.h
include/husky_base/horizon_legacy_api/: Exception.h  Logger.h  Message.h  Message_cmd.h  Message_data.h  Message_request.h  Number.h  Transport.h  clearpath.h  crc.h  cwrap.h  serial.h
launch/: base.launch
launch/imu_config/: ekf.launch  inertial_ekf.launch  um6.launch
launch/microstrain_config/: ekf.launch  microstrain.launch
launch/navsat_config/: compass.launch  navsat.launch  navsat_ekf.launch
launch/sick_config/: sick.launch
launch/um6_config/: um6.launch
launch/ur5_arm_config/: ur5.launch
nodes/: basic_odom_publisher  diagnostics_publisher
scripts/: calibrate_compass  compute_calibration  install
src/: horizon_legacy_wrapper.cpp  husky_base.cpp  husky_diagnostics.cpp  husky_hardware.cpp
src/horizon_legacy/: Message.cpp  Message_data.cpp  cwrap.cpp
src/horizon_legacy_api/: Logger.cpp  Message.cpp  Message_cmd.cpp  Message_data.cpp  Message_request.cpp  Number.cpp  Transport.cpp  crc.cpp  cwrap.cpp  linux_serial.cpp
udev/: 41-clearpath.rules
