<?xml version="1.0"?>
<package>
  <name>husky_bringup</name>
  <version>0.1.0</version>
  <description>Clearpath Husky installation package</description>

  <maintainer email="pbovbel@clearpathrobotics.com">Paul Bovbel</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roslaunch</build_depend>

  <run_depend>husky_base</run_depend>
  <run_depend>husky_description</run_depend>
  <run_depend>imu_compass</run_depend>
  <run_depend>lms1xx</run_depend>
  <run_depend>microstrain_3dmgx2_imu</run_depend>
  <run_depend>nmea_comms</run_depend>
  <run_depend>nmea_navsat_driver</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>robot_upstart</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>um6</run_depend>

  <export>
  </export>
</package>
